fix z-index and disable scroll when menu opened

--- a/scss/blocks/_burger_menu.scss
+++ b/scss/blocks/_burger_menu.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     width: 100%;
     background-color: $secondary-color;
+    z-index: 99;
     transition: 0.5s;
 
     &__content {
