--- a/scss/blocks/_custom_select.scss
+++ b/scss/blocks/_custom_select.scss
@@ -32,7 +32,7 @@
       top: 100%;
       left: 0;
       right: 0;
-      z-index: 99;
+      z-index: 0;
       max-height: 200px;
       overflow-y: auto;
       margin-top: 5px;
