--- a/scss/main.css
+++ b/scss/main.css
@@ -812,6 +812,7 @@ body {
   height: 100vh;
   width: 100%;
   background-color: #1b2357;
+  z-index: 99;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -904,7 +905,7 @@ body {
   top: 100%;
   left: 0;
   right: 0;
-  z-index: 99;
+  z-index: 0;
   max-height: 200px;
   overflow-y: auto;
   margin-top: 5px;
